fix: Security Flow
fix security flow + validation for business and order and adding necessary exception classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,13 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.devtools.restart.enabled=false
+
 
 # security properties
 jwt.secret = "niUy0bSgyn+ANXJAxeMN9OA4c5bNY4JanM2KMCapofE="
 token.validity = 36000000
 gmc.tag.length = 128
+aes.secret= "3U7iP9q8X5L2Jv9rT4KxF2Y+DzqM5zP1m9vQyW8aDsY="
+
 
