--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-spring.application.name=bussiness-shope
+spring.application.name=e-commerce
 
-# db config properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/maktab
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=9010231394
+spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.devtools.restart.enabled=false
-
 
 # security properties
 jwt.secret = "niUy0bSgyn+ANXJAxeMN9OA4c5bNY4JanM2KMCapofE="
@@ -18,4 +15,6 @@ token.validity = 36000000
 gmc.tag.length = 128
 aes.secret= "3U7iP9q8X5L2Jv9rT4KxF2Y+DzqM5zP1m9vQyW8aDsY="
 
-
+server.port=8084
+springdoc.api-docs.enabled= true
+springdoc.swagger-ui.enabled=true
