fix: Fix Swagger Config
deleting useless imports in class also change packaging of exception handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=e-commerce
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/maktab
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=9010231394
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -18,3 +18,4 @@ aes.secret= "3U7iP9q8X5L2Jv9rT4KxF2Y+DzqM5zP1m9vQyW8aDsY="
 server.port=8084
 springdoc.api-docs.enabled= true
 springdoc.swagger-ui.enabled=true
+logging.level.com.example.businessshop=DEBUG
